--- a/NEWS
+++ b/NEWS
@@ -1,16 +1,25 @@
-## Changes in verison 1.1.5
+Changes in verison 1.1.6
+----------------------------
+
+- change format of NEWS
+
+Changes in verison 1.1.5
+----------------------------
 
 - use new version of testthat
 
-## Changes in version 1.1.4
+Changes in version 1.1.4
+----------------------------
 
 - add citation
 
-## Changes in version 1.1.3
+Changes in version 1.1.3
+----------------------------
 
 - revised vignette
 
-## Changes in version 1.1.2
+Changes in version 1.1.2
+----------------------------
 
 - add examples in vignette
 - add `hc_polygon()`
@@ -19,26 +28,31 @@
   of the first segment can be selected
 
 
-## Changes in version 1.1.1
+Changes in version 1.1.1
+----------------------------
 
 - add functions specific for genomic data visualization
 
 
-## Changes in version 0.99.3
+Changes in version 0.99.3
+----------------------------
 
 - transparency is also averaged
 
 
-## Changes in version 0.99.2
+Changes in version 0.99.2
+----------------------------
 
 - jump to top viewport for each low-level functions
 
 
-## Changes in version 0.99.1
+Changes in version 0.99.1
+----------------------------
 
 - add dependency to base packages
 
-## Changes in version 0.99.0
+Changes in version 0.99.0
+----------------------------
 
 - new release
 
