--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in verison 1.5.1
+----------------------------
+
+- add a new vignette
+
+
 Changes in verison 1.1.6
 ----------------------------
 
