--- a/vignettes/HilbertCurve.Rmd
+++ b/vignettes/HilbertCurve.Rmd
@@ -656,7 +656,7 @@ hc_layer(hc, x1 = start, x2 = start + width, col = col[country])
 
 Duration of Chinese dynasties. Data from http://www.360doc.com/content/11/1123/02/7829717_166641336.shtml.
 
-```{r, eval = FALSE}
+```{r, eval = grepl("tbi", Sys.info()["nodename"]) & Sys.info()["user"] == "guz", echo = -c(21, 31)}
 load(system.file("extdata", "chinese_dynasty.RData", package = "HilbertCurve"))
 
 detect_os = function() {
@@ -677,6 +677,7 @@ fontfamily = switch(detect_os(),
     MacOS = "Songti SC",
     Linux = "Songti SC")
 
+png("chinese_dynasty.png", width = 500, height = 500)
 hc = HilbertCurve(min(chinese_dynasty[[2]]), max(chinese_dynasty[[3]]), 
     title = "Chinese dynasty (1122 B.C. ~ 1911 A.D.)", 
     title_gp = gpar(fontsize = 16, fontfamily = fontfamily))
@@ -686,6 +687,7 @@ hc_segments(hc, x1 = chinese_dynasty[[2]], x2 = chinese_dynasty[[3]],
 hc_text(hc, x1 = chinese_dynasty[[2]], x2 = chinese_dynasty[[3]], labels = chinese_dynasty[[1]], 
     gp = gpar(fontsize = (chinese_dynasty[[3]] - chinese_dynasty[[2]])/500 * 10 + 8, 
         fontfamily = fontfamily))
+invisible(dev.off())
 ```
 
 ```{r, echo = FALSE, results = "asis"}
@@ -730,8 +732,7 @@ hc_segments(hc, g, gp = gpar(lwd = 6, col = rand_color(length(g))))
 The conserved regions on human chromosome 1 between mouse and human or between zebrafish and human are downloaded from [UCSC
 Table Browser](http://genome.ucsc.edu/cgi-bin/hgTables?hgsid=472144813_MQ4BbmgW37du53Nw6n9SKKy6mb6r&clade=mammal&org=Human&db=hg38&hgta_group=compGeno&hgta_track=placentalChainNet&hgta_table=netMm10&hgta_regionType=genome&position=chr9%3A133252000-133280861&hgta_outputType=primaryTable&hgta_outFileName=). The parameters for downloading are:
 
-```
-clade: Mammal
+<pre>clade: Mammal
 genome: Human
 assembly: Feb. 2009(GRCh37/hg19)
 group: Comparative Genomics
@@ -741,7 +742,7 @@ table: Mouse Net (netMm10)
 # for zebrafish
 track: Vertebrate Chain/Net
 table: Zebrafish Net(netDanRer7)
-```
+</pre>
 
 The "net" alignment which is used here shows the best alignment (the alignment algorithm allows longer gaps than traditional affine gap scoring systems) between each part in human genome and other genomes. For a detailed description
 of the alignment strategy, please go to [UCSC
@@ -878,12 +879,11 @@ In this section, we visualize four types of histone modifications (H3K27ac, H3K3
 The ChIPSeq data are downloaded from Roadmap (http://genboree.org/EdaccData/Release-9/sample-experiment/Lung/). 
 Following files for four histone modifications are used to visualize:
 
-```
-UCSD.Lung.H3K27ac.STL002.bed
+<pre>UCSD.Lung.H3K27ac.STL002.bed
 UCSD.Lung.H3K36me3.STL002.bed
 UCSD.Lung.H3K4me3.STL002.bed
 UCSD.Lung.H3K9me3.STL002.bed
-```
+</pre>
 
 Since we are going to plot more than one histome marks, the code for plotting are wrapped as a simple function:
 
