--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in version 1.11.1
+
+- move IRanges and GenomicRanges to imports field in DESCRIPTION
+
 Changes in verison 1.5.2
 ----------------------------
 
