--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in version 1.13.1
+
+- update with new definition of legends
+
+----------------------------
+
 Changes in version 1.11.1
 
 - move IRanges and GenomicRanges to imports field in DESCRIPTION
