--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in version 1.13.2
+
+- fixed warnings in Rd files
+
+-----------------------------
+
 Changes in version 1.13.1
 
 - update with new definition of legends
