--- a/vignettes/HilbertCurve.Rmd
+++ b/vignettes/HilbertCurve.Rmd
@@ -517,9 +517,9 @@ the correspondance between H3K36me3 histone mark and gene body.
 ## Add title and legends
 
 Title can be set by the `title` argument in `HilbertCurve()`. 
-Legend can be passed to `legend` argument in `HilbertCurve()` as a `grob` object or a list of `grob` objects.
+Legend can be passed to `legend` argument in `HilbertCurve()` as a `grob`/`ComplexHeatmap::Legends` object or a list of these objects.
 Basically, colors are the main aesthetic mappings to values, thus, `Legend()` function in **ComplexHeatmap** package 
-can be very helpful to create a legend `grob`. Also you can consider `legendGrob()` in **grid** package.
+can be very helpful to create a legend. Also you can consider `legendGrob()` in **grid** package.
 
 ```{r}
 value = runif(length(ir))
@@ -547,8 +547,7 @@ col_fun = colorRamp2(c(-2, 0, 2), c("green", "white", "red"))
 breaks = seq(-2, 2, by = 2)
 lgd1 = Legend(at = breaks, col_fun = col_fun, title = "style 1")
 lgd2 = Legend(at = rev(breaks), legend_gp = gpar(fill = col_fun(rev(breaks))), title = "style 2")
-cm = ColorMapping(col_fun = col_fun)
-lgd3 = color_mapping_legend(cm, title = "style 3", plot = FALSE)
+lgd3 = Legend(col_fun = col_fun, title = "style 3", plot = FALSE)
 
 value = rnorm(length(x))
 hc = HilbertCurve(1, 1000, level = 9, mode = "pixel", title = "pixel mode", 
@@ -769,8 +768,8 @@ if it is partially covered by the conserved regions.
 
 ```{r}
 # for generating the legend
-cm = ColorMapping(col_fun = colorRamp2(c(0, 1), c("yellow", "red")))
-lgd = color_mapping_legend(cm, title = "Conservation", plot = FALSE,
+lgd = Legend(col_fun = colorRamp2(c(0, 1), c("yellow", "red")), 
+    title = "Conservation", plot = FALSE,
     at = c(0, 0.2, 0.4, 0.6, 0.8, 1), 
     labels = c("0%", "20%", "40%", "60%", "80%", "100%"))
 chr1_len = 249250621
@@ -824,8 +823,7 @@ is calculated by `hgGcPercent.bin` binary which is downloaded from http://hgdown
 png('gc_percent_chr1_points.png', width = 500, height = 500)
 df = read.table(pipe("awk '$1==\"chr1\"' ~/HilbertCurveTest/hg19_gc_percent_window1000.bed"))
 col_fun = colorRamp2(quantile(df[[5]], c(0.1, 0.5, 0.9)), c("green", "#FFFFCC", "red"))
-cm = ColorMapping(col_fun = col_fun)
-lgd = color_mapping_legend(cm, title = "GC percent", plot = FALSE,
+lgd = Legend(col_fun = col_fun, title = "GC percent", plot = FALSE,
     at = c(300, 400, 500, 600), 
     labels = c("30%", "40%", "50%", "60%"))
 
@@ -905,10 +903,9 @@ plot_histone_mark = function(mark) {
 	df = read.table(pipe(qq("awk '$5>0 && $1==\"chr1\"' ~/HilbertCurveTest/UCSD.Lung.@{mark}.STL002.bed")), 
         sep = "\t")
 	col_fun = colorRamp2(c(0, quantile(df[[5]], 0.99)), c("white", "red"))
-    cm = ColorMapping(col_fun = col_fun)
-    lgd = color_mapping_legend(cm, title = "Intensity", plot = FALSE)
-    cm2 = ColorMapping(level = c(mark, "gene"), color = c("#FF0000", "#CCCCCC"))
-    lgd2 = color_mapping_legend(cm2, title = "Layer", plot = FALSE)
+    lgd = Legend(col_fun = col_fun, title = "Intensity", plot = FALSE)
+    lgd2 = Legend(labels = c(mark, "gene"), legend_gp = gpar(fill = c("#FF0000", "#CCCCCC"))
+        title = "Layer", plot = FALSE)
 
 	hc = GenomicHilbertCurve(chr = "chr1", level = 9, mode = "pixel", 
         title = qq("Intensity of @{mark} mark on chr1"), legend = list(lgd, lgd2))
@@ -986,10 +983,9 @@ df = read.table(pipe("awk '$5>0 && $1==\"chr1\"' ~/HilbertCurveTest/UCSD.Lung.H3
     sep = "\t")
 col_fun = colorRamp2(c(0, quantile(df[[5]], 0.99)), c("white", "red"))
 col_fun_new = colorRamp2(c(0, quantile(df[[5]], 0.99)), c("white", "purple"))
-cm = ColorMapping(col_fun = col_fun)
-lgd = color_mapping_legend(cm, title = "Intensity", plot = FALSE)
-cm2 = ColorMapping(level = c("H3K36me3", "overlap", "gene"), color = c("#FF0000", "purple", "#CCCCCC"))
-lgd2 = color_mapping_legend(cm2, title = "Layer", plot = FALSE)
+lgd = Legend(col_fun = col_fun, title = "Intensity", plot = FALSE)
+lgd2 = Legend(labels = c("H3K36me3", "overlap", "gene"),
+    legend_gp = gpar(fill = c("#FF0000", "purple", "#CCCCCC")) title = "Layer", plot = FALSE)
 
 png("H3K36me3_chr1_overlap.png", width = 500, height = 500)
 hc = GenomicHilbertCurve(chr = "chr1", level = 9, mode = "pixel",
@@ -1030,8 +1026,7 @@ and intermediate methylated regions which are represented as large blocks.
 df = read.table(pipe("awk '$1==\"chr1\"' ~/HilbertCurveTest/UCSD.Lung.Bisulfite-Seq.STL002.bed"), 
     sep = "\t")
 col_fun = colorRamp2(c(0, 0.5, 1), c("blue", "white", "red"))
-cm = ColorMapping(col_fun = col_fun)
-lgd = color_mapping_legend(cm, title = "Methylation", plot = FALSE)
+lgd = Legend(col_fun = col_fun, title = "Methylation", plot = FALSE)
 png("methylation_chr1.png", width = 500, height = 500)
 hc = GenomicHilbertCurve(chr = "chr1", level = 9, mode = "pixel", legend = lgd)
 hc_layer(hc, df, col = col_fun(df[[5]]), mean_mode = "absolute")
